--- a/index.html
+++ b/index.html
@@ -1,29 +1,104 @@
+<!-- Safura Javan
+bachelor in philosophy at Tehran university
+master in etich philosophy at Payame noor university
+9 years working in bookshop
+knowing English language good
+knowing Turkish language good
+native Farsi speaker -->
+
+<!-- Author: Safura Javan
+Github: https://github.com/safurajavan -->
+
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>Safura Javan</title>
+        <!--Required meta tags-->
+        <meta charset="utf-8">
+        <meta name="description" content="Safura Javan's Online resume">
+        <meta name="keyword" content="Safura Javan Resume">
+        <meta name="author" content="Safura Javan">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <!--CSS-->
+        <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/css?family=Noto+Sans&display=swap" rel="stylesheet">
+        <link href="style.css" type="text/css" rel="stylesheet">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0-12/css/all.min.css" rel="stylesheet"> 
+        
+         
 
-<head>
-  <title>this is first Safura's work</title>
-  <link rel="stylesheet" href="style.css">
-</head>
+    </head>
+    <body>
+        <main class="container">
+            <div class="row">
+                <div class="col-lg-4 left-side">
+                    <header>
+                        <div class="profile">
+                            <div class="picture">
+                                <img src="https://media.freefeed.net/profilepics/4cc6e8c2-e8a9-4a8f-9259-8fda96ebd9da_75.jpg" alt="Safura Javan">
+                            </div>
+                            <a class="btn btn-cv" href="#" role="button" download>
+                                <i class="fas fa-file-alt"></i>Download Resume
+                            </a>
+                            <h1>Safura Javan</h1>
+                            <span>Communication Manager</span>
+                        </div>
+                        <ul class="social">
+                            <li>
+                                <i class="fas fa-envelope"></i>
+                                <span id="email">
+                                    <a href="#">safura.javan@gmail.com</a>
+                                </span>
+                            </li>
+                            <li>
+                                <i class="fab fa-github"></i>
+                                <a href="https://github.com/safurajavan/">Safura Javan</a>
+                            </li>
+                            <li>
+                                <i class="fab fa-linkedin"></i>
+                                <a href="#">safura javan</a>
 
-<body>
-  <h1>Maza is a great teacher</h1>
-  <h1>This is safura</h1>
-  <div class="main">
-    <div class="sub-main">
-      <button class="button-one">Click me!</button>
-    </div>
-    <div class="sub-main">
-      <button class="button-one">like!</button>
-    </div>
-    <div class="sub-main">
-      <button class="button-one">save!</button>
-    </div>
-  </div>
-  <div class="ads">
-    <img class="ads-image" src="https://media.freefeed.net/profilepics/4cc6e8c2-e8a9-4a8f-9259-8fda96ebd9da_75.jpg">
-  </div>
-</body>
-
+                            </li>
+                            <li>
+                                <i class="fab fa-twitter"></i>
+                                <a href="https://twitter.com/safura67">safura javan</a>
+                            </li>
+                        </ul>
+                        <p>description</p>
+                    </header>
+                </div>
+                <div class="col-lg-8 right-side">
+                    <article>
+                        <section>
+                            <h2 class="section-tite">
+                                <span class="fa-stack fa-xs">
+                                    <i class="fas fa-circle fa-stack-2x"></i>
+                                    <i class="fas fa-graduation-cap fa-stack-1x fa-inverse"></i>
+                                </span>
+                                Education
+                            </h2>
+                            <div class="school">
+                                <div class="upper-row">
+                                    <h3 class="school-name">
+                                        Farhang
+                                    </h3>
+                                    <div class="time">Jun. 2006</div>
+                                </div>
+                                <div class="school-title">Humanity</div>
+                                <b>description</b>
+                            </div>
+                        </section>
+                    </article>
+                </div>
+            </div>
+        </main>
+        <!--Javascript-->
+        <script src="script.js" type="text/javascript"></script>
+        <!--jQuery-->
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <!--propper.js-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <!--bootstrap-->
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    </body>
 </html>
-
