--- a/index.html
+++ b/index.html
@@ -137,6 +137,22 @@ Github: https://github.com/safurajavan -->
                                 <i class="fas fa-address-card fa-stack-1x fa-inverse"></i>
                             </span>
                             Let's get in touch
+                        </h2>
+                        <form class="contact-form" id="contact-form" method="POST">
+                            <div class="form-group">
+                                <input type="text" required="" name="name" class="form-control" placeholder="Name">
+                            </div>
+                            <div class="form-group">
+                                <input type="email" required="" name="_replyto" class="form-control" placeholder="Email">
+                            </div>
+                            <div class="form-group">
+                                <input type="text" required="" name="subject" class="form-control" placeholder="Subject">
+                            </div>
+                            <div class="form-group">
+                                <textarea rows="4" required="" name="message" class="form-control" placeholder="Message"></textarea>
+                            </div>
+                            <button type="submit" class="btn btn-cv">Submit</button>
+                        </form>    
                     </section>
                 </article>
             </div>
