#2 add university data, fix typo, remove an experience

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@ Github: https://github.com/safurajavan -->
     <link href="style.css" type="text/css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0-12/css/all.min.css" rel="stylesheet">
 </head>
-
 <body>
     <main class="container">
         <div class="row">
@@ -57,7 +56,7 @@ Github: https://github.com/safurajavan -->
                             <a href="https://twitter.com/safura67">safura javan</a>
                         </li>
                     </ul>
-                    <p>I'm Human Resource Management, I can speak English, Turkish and Farsi fluently.
+                    <p>I'm Human Resource Manager. I can speak English, Turkish and Farsi fluently.
                         In our forward-thinking startup, my attempts focuses on the recruitment, direction,
                         and management of human assets, and making strategic plans for the future.</p>
                 </header>
@@ -77,10 +76,34 @@ Github: https://github.com/safurajavan -->
                                 <h3 class="school-name">
                                     Farhang
                                 </h3>
-                                <div class="time">Jun. 2006</div>
+                                <div class="time">Jun. 2000</div>
                             </div>
                             <div class="school-title">Humanity</div>
-                            <b>description</b>
+                            <b>Farhang shool has very expert teachers. They do care about how hard the students do their homework
+                                 and the main reason I could go to the university was the way they trained me.</b>
+                        </div>
+                        <div class="school">
+                            <div class="upper-row">
+                                <h3 class="school-name">
+                                    Tehran university
+                                </h3>
+                                <div class="time">Sep. 2006</div>
+                            </div>
+                            <div class="school-title">Philosophy</div>
+                            <b>I have studied philosophy in bachelor dagree for 4 yeras 
+                                and I could not have wished for a better university to study there.
+                            </b>
+                        </div>
+                        <div class="school">
+                            <div class="upper-row">
+                                <h3 class="school-name">
+                                    Payame Noor
+                                </h3>
+                                <div class="time"> Sep. 2011</div>
+                            </div>
+                            <div class="school-title">Moral Philosophy</div>
+                            <b>I have studied Moral Philosophy in master dagree for 2 yeras.
+                            </b>
                         </div>
                     </section>
                     <section>
@@ -111,24 +134,11 @@ Github: https://github.com/safurajavan -->
                             </div>
                             <div class="job-title">head of forign books</div>
                             <ol>
-                                <li>Responsibility1</li>
-                                <li>Responsibility2</li>
-                                <li>Responsibility3</li>
+                                <li>Ordering forign books</li>
+                                <li>Entering book's information in the system</li>
+                                <li>Answering all the customers questions</li>
                             </ol>
                         </div>
-                        <div class="job">
-                            <div class="upper-row">
-                                <h3 class="company">
-                                    Baharnet
-                                </h3>
-                                <div class="time">Dec. 2018 - Feb. 2019</div>
-                            </div>
-                            <div class="job-title">HR</div>
-                            <ol>
-                                <li>Responsibility1</li>
-                                <li>Responsibility2</li>
-                                <li>Responsibility3</li>
-                            </ol>
                     </section>
                     <section>
                         <h2 class="section-title">
