--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ Github: https://github.com/safurajavan -->
                             </span>
                             Let's get in touch
                         </h2>
-                        <form class="contact-form" id="contact-form" method="POST">
+                        <form action="https://formspree.io/f/mleokgww" class="contact-form" id="contact-form" method="POST">
                             <div class="form-group">
                                 <input type="text" required="" name="name" class="form-control" placeholder="Name">
                             </div>
