--- a/mypractice.html
+++ b/mypractice.html
@@ -8,20 +8,20 @@
     </head>    
 <body>
         <div class="card">
-            <form>
+            <form action="https://formspree.io/f/xleokgpw" method="POST" target="self">
                 <div class="input-title">
                     <b>WHO IS THE BEST TEACHER?</b>    
                 </div>
                 <div class="radio">    
-                    <input type="radio" name="name">Maza
+                    <input type="radio" name="teacher" required="" value="Maza">Maza
                 </div>
                 <div class="radio">  
-                    <input type="radio" name="name">Pooya
+                    <input type="radio" name="teacher" required="" value="Pooya">Pooya
                 </div>    
                 <div class="radio">
-
-                    <input type="radio" name="name">Ezzat
-                </div>   
+                    <input type="radio" name="teacher" required="" value="Ezzat">Ezzat
+                </div>
+                <input type="submit" value="Submit">  
             </form>
         </div>
 </body>
