--- a/index.html
+++ b/index.html
@@ -29,9 +29,12 @@ Github: https://github.com/safurajavan -->
                             <img src="https://media.freefeed.net/profilepics/4cc6e8c2-e8a9-4a8f-9259-8fda96ebd9da_75.jpg"
                                 alt="Safura Javan">
                         </div>
-                        <a class="btn btn-cv" href="#" role="button" download>
-                            <i class="fas fa-file-alt"></i>Download Resume
-                        </a>
+                            <a class="btn btn-cv" href="#" role="button" download>
+                                <i class="fas fa-file-alt"></i>Download Resume
+                            </a>
+                            <a class="btn btn-cvs" href="https://safuraa.ir/mypractice.html" role="button" download>
+                                <i class="fas fa-file-alt"></i>Vote here                            
+                            </a>
                         <h1>Safura Javan</h1>
                         <span>Human Resource Manager</span>
                     </div>
