--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@ Github: https://github.com/safurajavan -->
                                 alt="Safura Javan">
                         </div>
                             <a class="btn btn-cv" href="#" role="button" download>
-                                <i class="fas fa-file-alt"></i>Download Resume
+                                Download Resume
                             </a>
                             <a class="btn btn-cvs" href="https://safuraa.ir/mypractice.html" role="button" download>
-                                <i class="fas fa-file-alt"></i>Vote here                            
+                                Vote here                            
                             </a>
                         <h1>Safura Javan</h1>
                         <span>Human Resource Manager</span>
