--- a/mypractice.html
+++ b/mypractice.html
@@ -21,7 +21,31 @@
                 <div class="radio">
                     <input type="radio" name="teacher" required="" value="Ezzat">Ezzat
                 </div>
-                <input type="submit" value="Submit">  
+                <div class="input-title"><br>
+                    <b>WHO IS THE CRAZIEST USER?</b>    
+                </div>
+                <div class="radio">    
+                    <input type="radio" name="teacher" required="" value="Maza">Ezzat
+                </div>
+                <div class="radio">  
+                    <input type="radio" name="teacher" required="" value="Pooya">Pooya
+                </div>    
+                <div class="radio">
+                    <input type="radio" name="teacher" required="" value="Ezzat">We are ALL crazy here
+                </div>
+                <div class="input-title"><br>
+                    <b>WHO IS THE KINDEST USER?</b>    
+                </div>
+                <div class="radio">    
+                    <input type="radio" name="teacher" required="" value="Maza">Safura
+                </div>
+                <div class="radio">  
+                    <input type="radio" name="teacher" required="" value="Pooya">Javan
+                </div>    
+                <div class="radio">
+                    <input type="radio" name="teacher" required="" value="Ezzat">Both
+                </div>
+                <input type="submit" value="Submit" class="btn">
             </form>
         </div>
 </body>
