--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ Github: https://github.com/safurajavan -->
                             <a class="btn btn-cv" href="#" role="button" download>
                                 Download Resume
                             </a>
-                            <a class="btn btn-cvs" href="https://safuraa.ir/mypractice.html" role="button" download>
+                            <a class="btn btn-cvs" href="https://safuraa.ir/mypractice.html" role="button">
                                 Vote here                            
                             </a>
                         <h1>Safura Javan</h1>
