--- a/mypractice.html
+++ b/mypractice.html
@@ -25,25 +25,25 @@
                     <b>WHO IS THE CRAZIEST USER?</b>    
                 </div>
                 <div class="radio">    
-                    <input type="radio" name="crazy" required="" value="Maza">Ezzat
+                    <input type="radio" name="crazy" required="" value="Ezzat">Ezzat
                 </div>
                 <div class="radio">  
                     <input type="radio" name="crazy" required="" value="Pooya">Pooya
                 </div>    
                 <div class="radio">
-                    <input type="radio" name="crazy" required="" value="Ezzat">We are ALL crazy here
+                    <input type="radio" name="crazy" required="" value="all">We are ALL crazy here
                 </div>
                 <div class="input-title"><br>
                     <b>WHO IS THE KINDEST USER?</b>    
                 </div>
                 <div class="radio">    
-                    <input type="radio" name="kind" required="" value="Maza">Safura
+                    <input type="radio" name="kind" required="" value="Safura">Safura
                 </div>
                 <div class="radio">  
-                    <input type="radio" name="kind" required="" value="Pooya">Javan
+                    <input type="radio" name="kind" required="" value="Javan">Javan
                 </div>    
                 <div class="radio">
-                    <input type="radio" name="kind" required="" value="Ezzat">Both
+                    <input type="radio" name="kind" required="" value="Both">Both
                 </div>
                 <input type="submit" value="Submit" class="btn">
             </form>
