fix the name option

--- a/mypractice.html
+++ b/mypractice.html
@@ -48,7 +48,7 @@
             </div>
             <div class="form-group">
                 <label for="crazy">2- who is the craziest user?</label>
-                <select id="teacher" name="techer" class="form-control" required="">
+                <select id="teacher" name="crazy" class="form-control" required="">
                     <option value="">choose...</option>
                     <option value="Maza">Ezzat</option>
                     <option value="Pooya">Pooya</option>
@@ -57,7 +57,7 @@
             </div>
             <div class="form-group">
                 <label for="crazy">3- who is the kindest user?</label>
-                <select id="teacher" name="techer" class="form-control" required="">
+                <select id="teacher" name="kind" class="form-control" required="">
                     <option value="">choose...</option>
                     <option value="safura">Safura</option>
                     <option value="javan">Javan</option>
