--- a/calculator.html
+++ b/calculator.html
@@ -8,6 +8,7 @@
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link href="calculator.css" type="text/css" rel="stylesheet" />
     <script src="calc-script.js" type="text/javascript"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0-12/css/all.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -133,6 +134,20 @@
         </div>
 
     </main>
+
+    <footer>
+        <div class="author">
+            <strong>&copy; Safura Javan</strong> | Human Resource Manager
+        </div>
+        <div class="resume">
+            Resume <a href="index.html" target="_blank">SafuraJavan</a>
+        </div>
+        <div class="social">
+            <a href="https://github.com/safurajavan/" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://www.linkedin.com/feed/" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://twitter.com/safura67" target="_blank"><i class="fab fa-twitter"></i></a>
+        </div>
+    </footer>
 </body>
 
 </html>
