--- a/index.html
+++ b/index.html
@@ -147,6 +147,16 @@ Github: https://github.com/safurajavan -->
                         <h2 class="section-title">
                             <span class="fa-stack fa-xs">
                                 <i class="fas fa-circle fa-stack-2x"></i>
+                                <i class="fas fa-project-diagram fa-stack-1x fa-inverse"></i>
+                            </span>
+                            Projects
+                        </h2>
+                        <b>Designing a calculator</b><br>
+                    </section>
+                    <section>
+                        <h2 class="section-title">
+                            <span class="fa-stack fa-xs">
+                                <i class="fas fa-circle fa-stack-2x"></i>
                                 <i class="fas fa-address-card fa-stack-1x fa-inverse"></i>
                             </span>
                             Let's get in touch
