--- a/calculator.html
+++ b/calculator.html
@@ -19,7 +19,7 @@
                         <div class="row mx-auto my-2">
                             <div class="col-10 col-lg-8 mx-auto mt-5 mb-2">
                                 <div class="display">
-                                    <input id="d" type="text" class="w-100 my-2 my-lg-2 h-100 form-control-lg" readonly>
+                                    <input id="display" value="" type="text" class="w-100 my-2 my-lg-2 h-100 form-control-lg" readonly>
                                 </div>
                             </div>
                         </div>
@@ -27,7 +27,7 @@
                             <div class="col-10 col-lg-8 mx-auto my-0">
                                 <div class="row keys">
                                     <div class="col-3 col-lg-3">
-                                        <button type="button" class="button gray w-100 my-2 my-lg-4 h-100 my-2 h-100" value="mrc" onclick='v("mrc")'>mrc</button>
+                                        <button type="button" class="button gray w-100 my-2 my-lg-4 h-100 my-2 h-100" value="0" onclick='c("0")'>on</button>
                                         
                                     </div>
                                     <div class="col-3 col-lg-3">
@@ -126,11 +126,7 @@
                 </div>
             </div>
         </div>
-        <div class="row buttonsbox">
-            <div class="row">
-                
-            </div>
-        </div>
+       </div>
 
     </main>
 </body>
